[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/audio/sfx/mouse_sfx.wav" type="AudioStream" id=1]
[ext_resource path="res://game/scripts/ControlScena2.gd" type="Script" id=2]
[ext_resource path="res://game/images/buttons/button_pause_normal.png" type="Texture" id=3]
[ext_resource path="res://game/images/buttons/button_pause_click.png" type="Texture" id=4]

[node name="MarginContainer" type="MarginContainer"]
margin_right = 480.0
margin_bottom = 270.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="AudioInGame" type="AudioStreamPlayer" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 480.0
margin_bottom = 270.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="Control"]
margin_left = 18.3494
margin_top = 105.134
margin_right = 443.349
margin_bottom = 243.134
text = "IN GAME"

[node name="btPause" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 45.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Node2D" type="Node2D" parent="."]

[connection signal="pressed" from="Control/Button" to="Control" method="returnGame"]
[connection signal="pressed" from="Control/btPause" to="Control" method="inPause"]
